gke/multi-tenancy/Tenant-Access/1-test-deploy/tenant-a/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-tenant-a
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes-tenant-a
  template:
    metadata:
      labels:
        app: hello-kubernetes-tenant-a
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
